--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -20,6 +20,7 @@
     = javascript_include_tag "highcharts"
     = javascript_include_tag 'json2'
     = javascript_include_tag 'inflection'
+    = javascript_include_tag 'rails', 'jquery.form', 'jquery.remotipart'
     = stylesheet_link_tag '/javascripts/css/uniform.default.css'
 
     / setup websocket includes
