added logs to start allowing querying of new layers

--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -52,6 +52,10 @@ body.bp
     #header_content
       +container
       padding-top: 16px
+      #logo_aifdr
+        background: transparent url(../images/aifdr_logo_50.png) no-repeat left center
+      #logo_bnpb
+        background: transparent url(../images/bnpb_logo_50.png) no-repeat left center
       h2
         +dark_inset
         color: #fff
