--- a/app/views/layers/create.js.erb
+++ b/app/views/layers/create.js.erb
@@ -2,41 +2,43 @@
 
 
   function onPopupClose(evt) {
-      selectControl.unselect(selectedFeature);
+      console.log("inside feature onPopupClose")
+      // select.unselect(selectedFeature);
   }
 
   function onFeatureSelect(e) {
-      console.log(e.CLASS_NAME);
-      console.log(e.feature);
-      selectedFeature = e.feature;
+      console.log("inside feature onFeatureSelect")
+      console.log(e);
+      // selectedFeature = e;
       f = e.feature
-      if(f.cluster) {
-        popup = new OpenLayers.Popup.FramedCloud("chicken", 
-                     f.geometry.getBounds().getCenterLonLat(),
-                     null,
-                     "<div style='font-size:.8em; color:#CCC;'>"                   +
-                        "Name: "          + f.attributes.Name         + "<br />"  +
-                        "Village: "       + f.attributes.Village      + "<br />"  +
-                        "Construction: "  + f.attributes.Constructi   +
-                      "</div>", null, true, onPopupClose);
-      } else {
-        popup = new OpenLayers.Popup.FramedCloud("chicken", 
-                     f.geometry.getBounds().getCenterLonLat(),
-                     null,
-                     "<div style='font-size:.8em; color:#CCC;'>"                   +
-                        "Total schools: " + f.attributes.count         + "<br />"  +
-                        "<a href=\"javascript:map.zoomIn()\">Zoom In</a>" +
-                      "</div>", null, true, onPopupClose);
-      }
-      
-      f.popup = popup;
-      map.addPopup(popup);
+      // if(f.cluster.length == 1) {
+      //   popup = new OpenLayers.Popup.FramedCloud("chicken",                      
+      //                f.cluster[0].geometry.getBounds().getCenterLonLat(),
+      //                null,
+      //                "<div style='font-size:.8em; color:#CCC;'>"                   +
+      //                   "Name: "          + f.cluster[0].attributes.Name         + "<br />"  +
+      //                   "Village: "       + f.cluster[0].attributes.Village      + "<br />"  +
+      //                   "Construction: "  + f.cluster[0].attributes.Constructi   +
+      //                 "</div>", null, true, onPopupClose);
+      // } else {
+      //   popup = new OpenLayers.Popup.FramedCloud("chicken", 
+      //                f.geometry.getBounds().getCenterLonLat(),
+      //                null,
+      //                "<div style='font-size:.8em; color:#CCC;'>"                   +
+      //                   "Total schools: " + f.attributes.count         + "<br />"  +
+      //                   "<a href=\"javascript:map.zoomIn()\">Zoom In</a>" +
+      //                 "</div>", null, true, onPopupClose);
+      // }      
+      // f.popup = popup;
+      // map.addPopup(popup);
   }
-  function onFeatureUnselect(e) {
-      f = e.feature    
-      map.removePopup(f.popup);
-      f.popup.destroy();
-      f.popup = null;
+  function onFeatureUnselect(feature) {
+      console.log("inside onFeatureUnselect");
+      console.log(feature);
+      // f = feature
+      // map.removePopup(f.popup);
+      // f.popup.destroy();
+      // f.popup = null;
   }    
 
 
