--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -88,6 +88,8 @@ body.bp .added { background: #006600; color: white; }
 body.bp .removed { background: #990000; color: white; }
 body.bp #header { margin-bottom: 10px; background: #aa0000; }
 body.bp #header #header_content { width: 920px; margin: 0 auto; overflow: hidden; *zoom: 1; padding-top: 16px; }
+body.bp #header #header_content #logo_aifdr { background: transparent url(../images/aifdr_logo_50.png) no-repeat left center; }
+body.bp #header #header_content #logo_bnpb { background: transparent url(../images/bnpb_logo_50.png) no-repeat left center; }
 body.bp #header #header_content h2 { text-shadow: rgba(0, 0, 0, 0.4) 0 -1px 1px; color: white; font-family: "BebasRegular"; text-align: center; font-size: 26px; letter-spacing: 0.2em; margin-bottom: 35px; }
 body.bp .pagehead { position: relative; margin-top: -30px; margin-left: auto; margin-right: auto; width: 920px; padding: 20px 25px 0 25px; background: url(/images/pagehead/background-white.png) 0 0 no-repeat; text-align: center; font-weight: light; font-size: 14px; letter-spacing: 0.2em; text-transform: uppercase; }
 body.bp .container { width: 920px; margin: 0 auto; overflow: hidden; *zoom: 1; }
