--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -33,6 +33,8 @@
     #header
       #header_content
         %h2 Risk In A Box
+        / %ul#nav
+        /   %li= link_to "Something", "#"
           
     = yield
 
