--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -87,10 +87,14 @@ body.bp .highlight { background: yellow; }
 body.bp .added { background: #006600; color: white; }
 body.bp .removed { background: #990000; color: white; }
 body.bp #header { margin-bottom: 10px; background: #aa0000; }
-body.bp #header #header_content { width: 920px; margin: 0 auto; overflow: hidden; *zoom: 1; padding-top: 16px; }
+body.bp #header #header_content { width: 920px; margin: 0 auto; overflow: hidden; *zoom: 1; background: transparent url(../images/riab-logos.png) right 8px no-repeat; padding-top: 26px; }
 body.bp #header #header_content #logo_aifdr { background: transparent url(../images/aifdr_logo_50.png) no-repeat left center; }
 body.bp #header #header_content #logo_bnpb { background: transparent url(../images/bnpb_logo_50.png) no-repeat left center; }
-body.bp #header #header_content h2 { text-shadow: rgba(0, 0, 0, 0.4) 0 -1px 1px; color: white; font-family: "BebasRegular"; text-align: center; font-size: 26px; letter-spacing: 0.2em; margin-bottom: 35px; }
+body.bp #header #header_content h2 { text-shadow: rgba(0, 0, 0, 0.4) 0 -1px 1px; color: white; font-family: "BebasRegular"; font-size: 26px; letter-spacing: 0.2em; margin-bottom: 45px; float: left; }
+body.bp #header #header_content #nav { overflow: hidden; *zoom: 1; list-style: none; margin: 8px 250px 0 0; padding: 0; float: right; }
+body.bp #header #header_content #nav li { margin: 0; padding: 0; float: left; }
+body.bp #header #header_content #nav li a { text-shadow: rgba(0, 0, 0, 0.4) 0 -1px 1px; color: white; text-decoration: none; }
+body.bp #header #header_content #nav li a:hover { text-decoration: underline; }
 body.bp .pagehead { position: relative; margin-top: -30px; margin-left: auto; margin-right: auto; width: 920px; padding: 20px 25px 0 25px; background: url(/images/pagehead/background-white.png) 0 0 no-repeat; text-align: center; font-weight: light; font-size: 14px; letter-spacing: 0.2em; text-transform: uppercase; }
 body.bp .container { width: 920px; margin: 0 auto; overflow: hidden; *zoom: 1; }
 body.bp #footer { padding: 10px; font-size: 0.8em; background: none repeat scroll 0 0 #aa0000; border-top: 3px solid #cccccc; clear: both; color: #888888; margin-top: 30px; padding: 20px 0; }
@@ -161,3 +165,10 @@ body.two-col .container { display: inline; float: left; margin-right: 0; width: 
 .message .container { padding: 0 3px 3px; }
 .message .buttons { border-right: 1px #cccccc dashed; display: inline; margin-right: 20px; padding-right: 20px; }
 .message .buttons .done { color: white; cursor: pointer; display: inline-block; font-family: Helvetica, "HelveticaNeue", Arial, sans-serif; line-height: 1; margin-top: 2px; position: relative; text-decoration: none; text-shadow: rgba(0, 0, 0, 0.4) 0 -1px 1px; -webkit-border-radius: 6px; -moz-border-radius: 6px; padding: 9px 14px 9px; font-family: Helvetica, "HelveticaNeue", Arial, sans-serif; font-size: 14px; font-weight: bold; -moz-box-shadow: 0 2px 5px #999999; -webkit-box-shadow: 0 2px 5px #999999; border: 1px solid #222222; background: #6ca520; background: -webkit-gradient(linear, left top, left bottom, from(#90bb58), to(#6ca520)); border-color: #dcf1bf; }
+
+#uploadform { margin: 20px 0 0; }
+#uploadform h3 { font-size: 16px; font-weight: bold; }
+#uploadform label { font-size: 10px; letter-spacing: 0.25em; text-transform: uppercase; }
+#uploadform input { display: block; margin: 2px 0 5px; }
+#uploadform button { color: white; cursor: pointer; display: inline-block; font-family: Helvetica, "HelveticaNeue", Arial, sans-serif; line-height: 1; margin-top: 2px; position: relative; text-decoration: none; text-shadow: rgba(0, 0, 0, 0.4) 0 -1px 1px; -webkit-border-radius: 6px; -moz-border-radius: 6px; padding: 9px 14px 9px; font-family: Helvetica, "HelveticaNeue", Arial, sans-serif; font-size: 14px; font-weight: bold; -moz-box-shadow: 0 2px 5px #999999; -webkit-box-shadow: 0 2px 5px #999999; border: 1px solid #222222; background: #6ca520; background: -webkit-gradient(linear, left top, left bottom, from(#90bb58), to(#6ca520)); border-color: #dcf1bf; }
+#uploadform button:hover { background: #3583cf; background: -webkit-gradient(linear, left top, left bottom, from(#629ed9), to(#3583cf)); border-color: #bbe2f8; }
