Upgraded to Rails3.

--- a/app/views/layers/_form.html.haml
+++ b/app/views/layers/_form.html.haml
@@ -15,8 +15,8 @@
       = f.label "Data file"
       = f.file_field :raw_data
 
-    .actions
-      %button{:type => 'submit'} Create layer
+    // .actions
+    %button{:type => 'submit'} Create layer
 
 :javascript
   $()
